# meet-sentinel

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  text.txt
docs/: BUILDING.md  ROADMAP.md
scripts/: bootstrap_qt_submodule.sh  build_qt_linux_static.sh  build_qt_windows_static.ps1
src/app/: main.cpp
src/core/: reminder_engine.cpp  reminder_engine.h
src/google/: README.md  calendar_client.cpp  calendar_client.h  curl_http_client.cpp  curl_http_client.h  http_client.cpp  http_client.h  loopback_authorization_server.cpp  loopback_authorization_server.h  oauth_client.cpp  oauth_client.h  pkce.cpp  pkce.h  url_encoding.cpp  url_encoding.h
src/persistence/: README.md  credential_store.cpp  credential_store.h  file_logger.cpp  file_logger.h  json_persistence.cpp  json_persistence.h
src/ui/: README.md
tests/core/: reminder_engine_test.cpp
tests/google/: google_client_test.cpp
tests/persistence/: persistence_test.cpp
